--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,28 @@
 version: '3.8'
 
 services:
-  suggestionbox:
+  api:
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    ports:
+      - "3001:3001"
+    volumes:
+      - ./data:/app/data
+    environment:
+      - PORT=3001
+    restart: unless-stopped
+    container_name: suggestionbox-api
+
+  web:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
       - "3000:80"
+    environment:
+      - VITE_API_URL=http://api:3001
+    depends_on:
+      - api
     restart: unless-stopped
-    container_name: suggestionbox-app
+    container_name: suggestionbox-web
