--- a/nginx.conf
+++ b/nginx.conf
@@ -18,6 +18,25 @@ server {
     gzip_comp_level 6;
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json application/javascript image/svg+xml;
 
+    # Proxy API requests to Node.js backend
+    location /api/ {
+        proxy_pass http://localhost:3001;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Health check endpoint proxied to backend
+    location /health {
+        proxy_pass http://localhost:3001/health;
+        access_log off;
+    }
+
     # Handle client-side routing
     location / {
         try_files $uri $uri/ /index.html;
@@ -34,12 +53,5 @@ server {
         deny all;
         access_log off;
         log_not_found off;
-    }
-
-    # Health check endpoint
-    location /health {
-        access_log off;
-        return 200 "healthy\n";
-        add_header Content-Type text/plain;
     }
 }
